--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ nav{
   box-shadow: 0px 5px 5px #EEEEEE;
 }
 
+
 .navGrid{
   display:grid;
   margin: 10px 0px 0px 100px;
@@ -49,6 +50,10 @@ nav{
   list-style-type: none;
   padding-left: 0px;
   margin-top: 5px;
+}
+
+a {
+  text-decoration: none;
 }
 
 .navItem {
@@ -103,9 +108,8 @@ nav{
   border-radius: 10px;
 }
 
-#lapLogo{
+#uxWhiteCard{
   border: 1px solid gray;
-  box-sizing: border-box;
 }
 
 h1 {
@@ -232,13 +236,24 @@ footer {
   bottom: 0;
 }
 
+.flexFooter{
+  margin: 10px auto;
+  display: flex;
+}
+
+
 footer ul {
-  font-family: 'Roboto', sans-serif;
-  color: #555555;
   align-items: center;
   font-weight: 500;
   padding-left: 0px;
-  margin: 10px auto 10px auto;
+  /* margin: 10px auto 10px auto; */
+}
+.footerItem {
+  font-family: 'Roboto', sans-serif;
+  color: #555555;
+  /* align-items: center;
+  font-weight: 500;
+  padding-left: 0px; */
 }
 
 footer li {
