--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ nav{
 .navList{
   list-style-type: none;
   padding-left: 0px;
+  padding-bottom: 10px;
   margin-top: 5px;
   border-bottom: 5px solid #199FFF;
 }
@@ -69,11 +70,8 @@ a {
   cursor: pointer;
 }
 
-.contentArea{
-  /* border: 1px solid red; */
-  display: block;
-  margin: 120px 250px 0px 250px;
-  /* height: 1200px; */
+#lastNav{
+  padding-right: 0px;
 }
 
 .sliderContainer{
@@ -127,6 +125,25 @@ h2 {
   margin-top: 0px;
 }
 
+h3{
+  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  color: #199FFF;
+  padding-left: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+#myName{
+  color:#199FFF;
+  /* font-size: 80px; */
+}
+
+#jobTitle{
+  color:#505050;
+}
+
 p{
   font-size: 14px;
   font-family: 'Roboto', sans-serif;
@@ -160,34 +177,50 @@ p{
   line-height: 1.5;
 }
 
+.contentArea{
+  /* border: 1px solid red; */
+  display: block;
+  margin: 120px 200px 0px 250px;
+}
+
 .contentLeft {
   display: inline-block;
   width: 65%;
   font-family: 'Roboto', sans-serif;
   color: #505050;
+  /* border: 1px solid blue; */
 }
 
 .contentRight {
   display: inline-block;
   /* height: calc(vh(".contentLeft")); */
   width: 25%;
-  padding: 10px;
   justify-content: center;
   align-items: center;
-  margin: auto;
 }
 
-.LeftTop{
+.rightTop{
+  float: right;
+}
+
+.rightBottom{
 
 }
+
+/* .LeftTop{
+
+} */
 
 .leftBottom{
   margin-top: 100px;
 }
 
-.workShot{
+.headShot{
   width: 100%;
   border-radius: 10px;
+  margin-left: 10px;
+  margin-top: 0px;
+  /* border: 1px solid #505050; */
 }
 
 
@@ -235,6 +268,98 @@ button{
   cursor: pointer;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+
+.slideshow-container {
+  margin: auto;
+  border: 1px solid orange;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 
 footer {
